# libdatrie

./: CMakeLists.txt
cmake/: config.h.in  libdatrie-config.cmake.in
datrie/: libdatrie.def
tests/: test_file.c
